--- a/BilardGame/MainWindow.xaml
+++ b/BilardGame/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BilardGame"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="1000" KeyDown="Window_KeyDown">
+        Title="MainWindow" Height="600" Width="1000" KeyDown="Window_KeyDown" KeyUp="Window_KeyUp">
     <Grid Background="Black">
         <Image Name="img"/>
     </Grid>
