Added players labels, added button for changing nicknames (not working)

--- a/BilardGame/App.xaml
+++ b/BilardGame/App.xaml
@@ -160,12 +160,12 @@
             </Setter>
         </Style>
         <Style TargetType="Border">
-            <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="Background">
+            <Setter Property="BorderThickness" Value="5"/>
+            <Setter Property="BorderBrush">
                 <Setter.Value>
                     <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
                         <GradientStop Color="Gold" Offset="0"/>
-                        <GradientStop Color="Black" Offset="1"/>
+                        <GradientStop Color="DarkGoldenrod" Offset="1"/>
                     </LinearGradientBrush>
                 </Setter.Value>
             </Setter>
