--- a/BilardGame/Instruction.xaml
+++ b/BilardGame/Instruction.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="Instruction" Height="200" Width="400" WindowStyle="None" ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
     <Border>
-        <Grid Margin="5">
+        <Grid>
             <Grid.Background>
                 <LinearGradientBrush StartPoint="0, 0" EndPoint="1, 1">
                     <GradientStop Color="DarkGreen" Offset="0"/>
